@@ -67,6 +67,9 @@ static tConfItem<REAL> cmlocy("CM_LOCY",centerMessageY);
 static int sr_columns = 78;
 static tConfItem<int> sr_columnsConf("CONSOLE_COLUMNS",sr_columns);
 
+static int sr_indent = 3;
+static tConfItem<int> sr_indentConf("CONSOLE_INDENT",sr_indent);
+
 void rConsole::Render(){
     if (!sr_glOut)
         return;
@@ -108,7 +111,7 @@ void rConsole::Render(){
             rTextField out(-.95f,.99f,rCHEIGHT_CON, sr_fontConsole);//,&rFont::s_defaultFontSmall);
             out.SetWidth(1.9f);
             out.EnableLineWrap();
-            out.SetIndent(3);
+            out.SetIndent(sr_indent);
 
             int i;
             for (i=currentTop;i<=currentIn && i<=currentTop+MaxHeight();i++)
